--- a/News_Articles/style.css
+++ b/News_Articles/style.css
@@ -1,10 +1,12 @@
 :root {
-    --primary-color: #1a73e8;
-    --secondary-color: #185abc;
+    --primary-color: #750364e7;
+    --secondary-color: #761171;
     --background-color: #ffffff;
     --text-color: #202124;
     --card-shadow: rgba(0,0,0,0.1);
     --hover-shadow: rgba(0,0,0,0.2);
+    --hover-shadow: rgba(0, 0, 0, 0.2);
+    --transition: all 0.6s ease-in-out;
 }
 
 body {
@@ -41,7 +43,7 @@ header {
 }
 
 .toggle-btn, .close-drawer-btn {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     cursor: pointer;
     background: transparent;
     color: white;
@@ -58,6 +60,14 @@ header {
     cursor: pointer;
     font-size: 1rem;
     color: white;
+    text-transform: uppercase;
+    padding: 0.5rem 1rem;
+}
+
+.nav-item:hover {
+    background: var(--secondary-color);
+    border-radius: 50px;
+    transition: var(--transition)
 }
 
 .nav-drawer {
@@ -65,7 +75,7 @@ header {
     top: 0;
     left: 0;
     height: 100%;
-    width: 250px;
+    width: 220px;
     background-color: var(--primary-color);
     color: white;
     transform: translateX(-100%);
@@ -81,6 +91,7 @@ header {
 .drawer-header {
     display: flex;
     justify-content: space-between;
+    
 }
 
 .news-container {
